--- a/multimedia/mpv/Makefile
+++ b/multimedia/mpv/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.61 2017/11/26 13:57:08 leot Exp $
+# $NetBSD: Makefile,v 1.61.2.1 2018/02/24 22:44:53 spz Exp $
 
-DISTNAME=	mpv-0.27.0
+DISTNAME=	mpv-0.27.2
 CATEGORIES=	multimedia
 MASTER_SITES=	${MASTER_SITE_GITHUB:=mpv-player/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -20,6 +20,8 @@ BUILD_DEPENDS+=	${PYPKGPREFIX}-docutils>=0.12:../../textproc/py-docutils
 BUILD_DEPENDS+=	waf>=1.8.12:../../devel/waf
 
 WAF_CONFIGURE_ARGS+=	--bindir=${PREFIX}/bin
+WAF_CONFIGURE_ARGS+=	--enable-dvdnav
+WAF_CONFIGURE_ARGS+=	--enable-dvdread
 
 PYTHON_FOR_BUILD_ONLY=	yes
 
@@ -61,6 +63,7 @@ post-install:
 .include "../../converters/libiconv/buildlink3.mk"
 .include "../../devel/waf/waf.mk"
 .include "../../devel/zlib/buildlink3.mk"
+.include "../../graphics/lcms2/buildlink3.mk"
 .include "../../lang/python/application.mk"
 .include "../../multimedia/libdvdnav/buildlink3.mk"
 .include "../../multimedia/libdvdread/buildlink3.mk"
