--- a/lang/ruby23-base/Makefile
+++ b/lang/ruby23-base/Makefile
@@ -1,9 +1,14 @@
-# $NetBSD: Makefile,v 1.11 2017/09/15 00:36:17 taca Exp $
+# $NetBSD: Makefile,v 1.11.6.1 2018/03/02 20:35:49 spz Exp $
 
 DISTNAME=	${RUBY_DISTNAME}
 PKGNAME=	${RUBY_PKGPREFIX}-base-${RUBY_VERSION}
+PKGREVISION=	2
 CATEGORIES=	lang ruby
 MASTER_SITES=	${MASTER_SITE_RUBY}
+
+PATCH_SITES=	https://bugs.ruby-lang.org/attachments/download/7029/
+PATCHFILES=	rubygems-276-for-ruby23.patch
+PATCH_DIST_STRIP=	-p0
 
 MAINTAINER=	taca@NetBSD.org
 HOMEPAGE=	${RUBY_HOMEPAGE}
