--- a/lang/ruby24-base/Makefile
+++ b/lang/ruby24-base/Makefile
@@ -1,9 +1,14 @@
-# $NetBSD: Makefile,v 1.5 2017/09/15 00:39:46 taca Exp $
+# $NetBSD: Makefile,v 1.5.6.1 2018/03/02 20:36:36 spz Exp $
 
 DISTNAME=	${RUBY_DISTNAME}
 PKGNAME=	${RUBY_PKGPREFIX}-base-${RUBY_VERSION}
+PKGREVISION=	2
 CATEGORIES=	lang ruby
 MASTER_SITES=	${MASTER_SITE_RUBY}
+
+PATCH_SITES=	https://bugs.ruby-lang.org/attachments/download/7028/
+PATCHFILES=	rubygems-276-for-ruby24.patch
+PATCH_DIST_STRIP=	-p0
 
 MAINTAINER=	taca@NetBSD.org
 HOMEPAGE=	${RUBY_HOMEPAGE}
