--- a/lang/php72/Makefile
+++ b/lang/php72/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2017/11/30 20:45:46 jdolecek Exp $
+# $NetBSD: Makefile,v 1.3.2.1 2018/03/03 09:23:45 spz Exp $
 
 #
 # We can't omit PKGNAME here to handle PKG_OPTIONS.
@@ -40,13 +40,6 @@ SUBST_SED.path=		-e 's,@CGIDIR@,${CGIDIR},g'
 SUBST_SED.path+=	-e 's,@PREFIX@,${PREFIX},g'
 
 INSTALLATION_DIRS+=	${CGIDIR} ${PHP_EXTENSION_DIR} ${EGDIR} share/php
-
-# segfault generating phar.phar for i386 & SPARC
-# revisit this if builtin PCRE is updated beyond PCRE1 8.38
-# https://bugs.php.net/bug.php?id=73880
-.if ${MACHINE_ARCH} != "x86_64"
-CONFIGURE_ARGS+=	--without-pcre-jit
-.endif
 
 # Make sure modules can link correctly
 .if ${OPSYS} == "Darwin"
